@@ -2,5 +2,9 @@ TODO
 ? optional mimetype specification for link (http://www.cmsimpleforum.com/viewtopic.php?f=16&t=3946#p23904)
 ? add register user info to download log
 
+Version 1dev2 - internally released 2012-03-17
+cmb	added filesize info to download button
+cmb	added warning if download file is not readable
+
 Version 1dev1 - internally released 2012-01-08
 cmb	initial release
